by default media widgets start in upload form

--- a/cyclope/apps/media_widget/templates/media_widget/media_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_upload.html
@@ -4,7 +4,7 @@
     {{ form.media_type }}
     <!--
     <div class="pull-right">
-        Mostrar junto al contenido
+        TODO checkbox x carrousel, radio button for teasera
         <input type="checkbox" name="show_name" value="no">
     </div>
     -->
@@ -17,7 +17,7 @@
     </div>
     <!--
     <div class="pull-right">
-        Mostrar junto al contenido
+        TODO checkbox x carrousel, radio button for teasera
         <input type="checkbox" name="show_desc" value="no">
     </div>
     -->
