--- a/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
@@ -1,62 +1,23 @@
+{% load staticfiles %}
 <head>
     <!--styles-->
     <link href="{{CYCLOPE_STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
     <!--scripts-->
     <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}{{ CYCLOPE_JQUERY_PATH }}"></script>
     <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/bootstrap/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{% static 'media_widget/pictures_widget.js' %}"></script>
     <script type="text/javascript">
-        $(function(){ 
-            //TODO move to .js in MdWdgt
-            
-            //refresh parent (article's admin) widget pictures
-            function media_widget_refresh(type, param){
-                url = type=="article_id" ? "/media_widget/pictures/widget/article/" : "/media_widget/pictures/widget/pictures/";
-                url += param;
-                $.get(url, function(data) {
-                    $("#media_widget", window.parent.document).html(data);
-                });
-            }
-            function delete_pictures_refresh(pictures_list){
-                url = "/media_widget/pictures/delete_list/"+pictures_list;
-                $.get(url, function(data) {
-                    $("#delete").html(data);
-                });
-            }
-            function search_refresh(pictures_list){ //param=LIB-pictures_list
-                url = "/media_widget/pictures/widget/select/"+pictures_list;
-                $.get(url, function(data) {
-                    $("#search").html(data);
-                });
-            }
-            
-            {% if refresh_widget %}
-                {% if article_id %}
-                    media_widget_refresh("article_id", {{article_id}});
-                {% else %}
-                    var pictures_list = "" ;
-                    //pre-existent pictures
-                    inputs = $('[name="pictures"]', window.parent.document).map(function() { 
-                        return $(this).val(); 
-                    }).get();
-                    if(inputs!=""){
-                        pictures_list += inputs + ",";
-                    }
-                    //new picture
-                    {% if new_picture %}
-                        pictures_list += "{{new_picture}},";
-                    {% elif remove_picture %}
-                        pictures_list = pictures_list.replace("{{remove_picture}},",'');
-                    {% endif %}
-                    //
-                    media_widget_refresh("pictures_list", pictures_list);
-                    delete_pictures_refresh(pictures_list);
-                    search_refresh(pictures_list);
-                {% endif %}
+    {% if refresh_widget %}
+        {% if article_id %}
+            media_widget_refresh("article_id", {{article_id}});
+        {% else %}
+            {% if new_picture %}
+                dance_hall_queen("blues", new_picture, null);
+            {% elif remove_picture %}
+                dance_hall_queen("reggae", null, remove_picture);
             {% endif %}
-        
-            // clean message alerts after 8s
-            $(".message-row").delay(8000).fadeOut();
-        });
+        {% endif %}
+    {% endif %}
     </script>
 </head>
 <body>
