--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_one_column.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_one_column.html
@@ -6,9 +6,9 @@
 
 {% block page_content %}
     <div class="col-xs-12">
-        <div class="row">{% region 'top' %}</div>
-        <div class="row">{% block content %}{% endblock %}</div>
-        <div class="row">{% region 'bottom' %}</div>
+        {% region 'top' %}
+        {% block content %}{% endblock %}
+        {% region 'bottom' %}
     </div>
 {% endblock %}
 
