fixes Embedded MediaWidget: unexistent content type because select is empty, as there's no django templating language in javascript (yet)

--- a/cyclope/apps/media_widget/templates/media_widget/media_select.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_select.html
@@ -25,4 +25,8 @@
 {% include "media_widget/pagination_footer.html" with widget='embed' %}
 
 <!-- update media_type selected option on ajax calls -->
-<script type="text/javascript" src="{% static 'media_widget/media_select.js' %}"></script>
+<script type="text/javascript">
+$(function(){
+    $("#selectMediaType").val("{{media_type}}");
+});
+</script>
