fixes file_url undefined in embed/create ajax, upload&embed

--- a/cyclope/apps/media_widget/templates/media_widget/media_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_widget.html
@@ -14,7 +14,7 @@
     });
     </script>
     <!-- return to markItUp from upload & insert code -->
-    {% if file_url %}<script type="text/javascript">media_widget_markitup(file_url, media_type);</script>{% endif %}
+    {% if file_url %}<script type="text/javascript">media_widget_markitup('{{file_url}}', '{{media_type}}');</script>{% endif %}
 </head>
 <body>
     <div id="mediaUpload" class="container-fluid">
