--- a/cyclope/apps/media_widget/templates/media_widget/picture_form.html
+++ b/cyclope/apps/media_widget/templates/media_widget/picture_form.html
@@ -4,7 +4,7 @@
 
 {{ form.non_field_errors }}
 
-<div class="form-group {%if form.image.errors%}has-error bg-danger{% else %}bg-success{%endif%}">
+<div class="form-group {% if form.image.errors %}has-error bg-danger{% else %}bg-success{% endif %}">
     <label for="file">Im&aacute;gen</label>
     {{ form.image }}
     <span id="helpName" class="help-block">
@@ -13,32 +13,22 @@
     <p class="help-block">Seleccionar im&aacute;gen para subir</p>
 </div>
 
-<!--
-<div class="pull-right">
-    Mostrar junto al contenido
-    <input type="checkbox" name="show_name" value="no">
-</div>
--->
-<div class="form-group {%if form.name.errors%}has-error{%endif%}">
-    <label for="fileName">Nombre*</label>
+<div class="form-group {% if form.name.errors %}has-error{% endif %}">
+    <label for="fileName">Nombre</label>
     {{ form.name }}
     <span id="fileName" class="help-block">
         {{ form.name.errors }}
     </span>
 </div>
-<!--
-<div class="pull-right">
-    Mostrar junto al contenido
-    <input type="checkbox" name="show_desc" value="no">
-</div>
--->
-<div class="form-group {%if form.description.errors%}has-error{%endif%}">
-    <label for="fileDesc">Descripci&oacute;n*</label>
+
+<div class="form-group {% if form.description.errors %}has-error{% endif %}">
+    <label for="fileDesc">Descripci&oacute;n</label>
     {{ form.description }}
     <span id="helpName" class="help-block">
         {{ form.description.errors }}
     </span>
 </div>
+
 <div class="row">
     <div class="col-xs-6">
         <button type="submit" class="btn btn-danger btn-block btn-lg">
