widget messages around visor

--- a/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
@@ -22,16 +22,24 @@
 </head>
 <body>
     <div class="container-fluid">
+
         {% if messages %}
-            {% for message in messages %}
-                <div  class="row message-row">
-                    <div class="col-xs-12 {% if message.tags %} alert alert-{{ message.tags }}{% endif %}">
-                        {{ message }}
-                    </div>
-                </div>
-            {% endfor %}
+            <div id="full-alert" class="alert alert-warning">
+            {#<!-- if message.tags %} alert alert-{{ message.tags }}{% endif -->#}
         {% endif %}
+
         <div class="row text-center" id="visor_pictures_widget"><!--Widget--></div>
+
+        {% for message in messages %}
+            <div  class="row message-row">
+                <div class="col-xs-12 text-center">
+                    {{ message }}
+                </div>
+            </div>
+        {% endfor %}
+
+        {% if messages %}</div>{% endif %}
+
         <div class="row">
             <div class="col-xs-12">
                 <ul class="nav nav-tabs" role="tablist">
