--- a/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
@@ -75,5 +75,9 @@
                 </div>
             </div>
         </div>
+        <div class="row text-center">
+            <br />
+            <button id="btn-volver" type="button" class="btn btn-default btn-lg btn-block">Volver <small>(Esc)</small></button>
+        </div>
     </div>
 </body>
