--- a/cyclope/apps/related_admin/templates/related_admin/gfk_widget.html
+++ b/cyclope/apps/related_admin/templates/related_admin/gfk_widget.html
@@ -15,6 +15,8 @@
 </div>
 
 <script type="text/javascript">
+{#// TODO when upgrading django, and django.jQuery, remove isolation #}
+(function($){
 
 var gfkSetNewValue = function( id_name,value){
     var obj = $("#" + id_name);
@@ -122,4 +124,6 @@ var content_types = new Array();
 
         return false; // prevent multiple events
     });
+    
+})(django.jQuery);
 </script>
