--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_labeled_icon.html
@@ -1,7 +1,7 @@
 {% load fb_versions cyclope_utils %}
 
 	{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+  <div class="teaser_icon {% if region_name %}{% inline_content_classes %}{% endif%}">
 		<div class="thumbnail">
 					<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
 				{% if current_object.image %}
