--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_labeled_icon.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_labeled_icon.html
@@ -1,32 +1,35 @@
 {% load i18n fb_versions cyclope_utils %}
-
-	{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
+	<div class="teaser_icon {% if region_name %}{% inline_content_classes %}{% endif%}">
 		<div class="thumbnail">
 			<a href="{% url staticpage-detail staticpage.slug %}">
-      {% if staticpage.pictures %}
-				  <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" alt="staticpage icon"/>
+				{% if staticpage.pictures %}
+					<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" alt="staticpage icon"/>
 					<img class="img-responsive" src="{% version staticpage.pictures.0.image.path 'labeled_icon_bootstrap' %}" alt="{{ staticpage.name }} "border="0"/>
 				{% else %}
 					<img class="img-responsive" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
 				{% endif %}
 			</a>
 			<div class="caption">
-				<h4><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name|truncatechars:40 }}</a></h4>
+				<h4>
+					<a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name|truncatechars:40 }}</a>
+				</h4>
 			</div>
 		</div>
 	</div>
-	{% elif CYCLOPE_THEME_TYPE == 'classic' %}
-  <div class="labeled_icon staticpage">
-    <a href="{% url staticpage-detail staticpage.slug %}">
-      {% if staticpage.image %}
-      <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png"/>
-      <img class="icon" src="{% version staticpage.image.path 'thumbnail' %}"/>
-      {% else %}
-       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" border="0"/>
-        <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
-      {% endif %}
-    </a>
-    <h2 class="title"><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name|truncatechars:40 }}</a></h2>
-  </div>
-  {% endif %}  
+{% elif CYCLOPE_THEME_TYPE == 'classic' %}
+	<div class="labeled_icon staticpage">
+		<a href="{% url staticpage-detail staticpage.slug %}">
+		{% if staticpage.image %}
+			<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png"/>
+			<img class="icon" src="{% version staticpage.image.path 'thumbnail' %}"/>
+		{% else %}
+			<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" border="0"/>
+			<img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
+		{% endif %}
+		</a>
+		<h2 class="title">
+			<a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name|truncatechars:40 }}</a>
+		</h2>
+	</div>
+{% endif %}  
