Fixed custom css

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -1,238 +1,5 @@
-/*
- * Style tweaks
- * --------------------------------------------------
- */
+#left .navbar-nav > li, #rigth .navbar-nav > li {float:none;display:block;}/*fix float vertical navbar */
 
-/*@import "../less/bootstrap.less";*/
-
-html,
-body {
-  overflow-x: hidden; /* Prevent scroll on narrow devices */
-  padding-top: 35px;
-}
-footer {
-  padding: 30px 0;
-}
-/*
- * Cyclope
- * --------------------------------------------------
- */
-
-form.crispy-dynamic-form .controls .radio, form.crispy-dynamic-form .controls .checkbox  {margin:0 0 0 20px;font-weight:400;}
-form.crispy-dynamic-form img {display:block;}
-img.type_icon {display:inline;}
-.jumbotron {background:#eee;}
-.jumbotron .title {font-size: 63px;}
-.jumbotron img.teaser_icon {float:left;margin:0 10px 0 0;border-radius:50%;}
-.jumbotron .teaser_more {margin:30px 0 0;}
-.breadcrumb ol.content_types {background:#ccc;position:absolute;list-style:none;padding:0;margin:0;}
-.breadcrumb {clear: both;}
-#block_content {overflow:auto;}
-.center-block { cursor: pointer; }
-.center-block { width: 100%; }
-.carousel-control.right, .carousel-control.left {background:none;}
-.carousel-control.right, .carousel-control.left {background:none;}
-
-@media screen and (min-width: 768px) {
-.carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev { margin-left: -40px!important; }
-.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next { margin-right: -40px!important;}
-}
-
-.carousel-inner {margin:0;}
-.carousel-caption, .default .carousel-caption 
-{bottom:0;padding:0;left:0;right:0;background:#000;color:#fff;filter: alpha(opacity=50);opacity: .7;}
-.default .carousel-caption {}
-.carousel-caption h2 a {color:#fff;padding:0 10px;}
-.carousel-caption p {padding:0 10px 5px;margin:0;width:100%;font-size:15px;}
-.carousel-inner > .item {background:#fff;}
-.carousel-inner > .item > a > img { width:100%;}
-.carousel-indicators {display: block;position:relative;top:5px;}
-.carousel-indicators li {background-color: #ccc;}
-.carousel-indicators .active {
-  width: 12px;
-  height: 12px;
-  margin: 0;
-  background-color: #999;
-}
-.modals-picture .carousel-caption {background:#eee; position: relative; padding: 15px 5px 0 5px; margin:0 0 20px 0; width: 100%; font-size: 15px; color: #337ab7; opacity: 1; border-bottom: 1px solid #DCDCDC;}
-.modals-picture .carousel-caption p { padding:0; text-shadow:none;cursor: pointer; padding: 0 0 10px 0; }
-.jumbotron .carousel-control {width:0;}
-
-.default .title {border-bottom:1px solid #999;padding:0 0 10px;}
-#map ul {margin:0;padding:0;list-style:none;}
-#map li {font-weight:700;}
-#map ul ul {margin:10px 0;}
-#map ul ul ul {margin:0;}
-#map li li {font-weight:400;margin:0 0 0 20px;}
-ul.media-list {margin:25px 0 0;}
-ul.media-list ul {margin-left:64px;}
-.media { margin-top: 0px !important; }
-#user_comments #wrap_write_comment {margin-top:20px;}
-.related_contents ul  {list-style:none !important;padding:0;margin:0;}
-.contact_fields  {margin:0 auto;}
-.contact_fields h3 {text-align:center;font-weight:700;font-size:20px;text-transform:uppercase;border-bottom:1px solid #999;margin:30px 20px 0;}
-.contact_fields p {display:inline-block;padding:3px 10px;margin:5px auto;width:40%;}
-.contact_field {display:block;margin:0 auto;text-align:center;}
-.contact_field .text-right {font-weight:700;}
-.contact_fields small,.contact_fields .btn {margin:20px 0 0;}
-.category_add_content span:hover {
-  background-color: #cccccc;
-}
-.category_add_content .content_types {
-  background-color: #ffffff;
-  border: 3px solid #cccccc;
-  color: #000000 !important;
-  display: block;
-  font-size: 12px !important;
-  line-height: normal !important;
-  list-style: none outside none !important;
-  margin: 0 0 0 0 !important;
-  padding: 10px 15px !important;
-  position: absolute;
-  width: 130px;
-  z-index: 2000;
-}
-.category_add_content .content_types li {
-  margin: 0 !important;
-  padding: 0 !important;
-}
-.category_add_content .content_types li a {
-  background-color: #eeeeee !important;
-  color: #666666 !important;
-  float: left;
-  font-size: 12px !important;
-  font-weight: bold;
-  margin-bottom: 5px;
-  padding-bottom: 5px;
-  padding-top: 5px;
-  text-align: center;
-  text-decoration: none;
-  width: 100%;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-.category_add_content .content_types li a:hover {
-  background-color: #999999 !important;
-  color: #ffffff !important;
-}
-.summary img {display:none;}
-.download_link {margin:0 0 10px 0;}
-.download_link .glyphicon {padding:0 5px 0 0;}
-.default .teaser_icon_container {padding:20px 0;}
-.default .teaser_icon_container p {margin:10px auto;text-align:center;}
-.detail .teaser_icon_container {background:#eee;margin:10px 0;}
-.movieclip_picture {background:#fff;padding:10px 0;margin:10px 0;border-top:1px solid #ccc;border-bottom:1px solid #ccc;}
-.teaser_icon_container:hover {background:transparent;}
-#bottom img.teaser_icon {border-radius:50%;margin:10px auto;}
-#bottom img.teaser_icon:hover {border-radius:0;-webkit-transition-duration: 0.4s;-moz-transition-duration: 0.4s;-o-transition-duration: 0.4s;transition-duration: 0.4s;}
-#bottom .pretitle {display:none;}
-.media .date, 
-.staticpage .date,
-.article-teaser .date {display:none; font-size: 1em; color: #337AB7; margin:15px 0 -15px 0;}
-
-#sidebar .collapse {display:block;}
-#sidebar .navbar-nav {width: 100% !important;margin:0 0 10px;padding:0;}
-#sidebar .navbar-nav ul {width: 100% !important;}
-#sidebar .navbar-collapse {padding:0 !important;}
-#sidebar .navbar-nav li {float: none !important;background-color: #fff;padding:0 !important;position: relative;display: block; margin-bottom: -1px; border: 1px solid #ddd;}
-#sidebar .navbar-nav li:first-child {border-top-left-radius: 4px;border-top-right-radius: 4px;}
-#sidebar .navbar-nav li:last-child {margin-bottom: 0;border-bottom-right-radius: 4px;border-bottom-left-radius: 4px;}
-#sidebar .navbar-nav li a {color: #555;}
-#sidebar .navbar-nav li a.navbar-nav li-heading {color: #333;}
-#sidebar .navbar-nav li a:hover,
-#sidebar .navbar-nav li a:focus {color: #555;text-decoration: none;background-color: #f5f5f5;}
-#sidebar .search-box {padding:3px 0;background:#eee;margin:0;border-radius:4px;}
-#sidebar .search-box .form-control {color:#959595;}
-
-@media (max-width: 767px) {
-    .affix{
-        position: static;
-    }
-}
-@media (max-width: 480px) {
-    .affix{
-        position: static;
-    }
-}
-
-.navbar { border-radius: 0; }
-nav.affix {top:0px;z-index:20;}
-.affix {width:100%;}
-
-.toggle-botton-nav {position:relative;z-index:20;}
-
-.poll-submission .radio,.poll-submission .checkbox {margin-top: 0px;margin-bottom: 0px;}
-.poll-submission label.checkbox, .poll-submission label.radio {margin-left:30px;display:block;font-weight:400;}
-.poll-submission .control-label {}
-.poll-submission input {margin-left:10px;display:block;}
-.poll-submission img {margin-left:10px;display:block;}
-.poll-submission .form-control {width:auto;}
-.poll-submission .panel-footer input {display:inline;}
-.poll-submission .summary {padding:10px;}
-.poll-submission .form-group {padding:0 10px;}
-
-.default .poll-submission.panel h3 {color:#000;font-size:36px;border-bottom: 1px solid #999;padding:0 0 10px;}
-.default .poll-submission.panel {border:none;box-shadow:none;}
-.default .poll-submission.panel-primary > .panel-heading {background:#fff;border:none;padding:0;}
-.default .poll-submission .summary {padding:0;margin:20px 0;}
-.default .poll-submission .form-group {padding:0;}
-.default .poll-submission .panel-footer {background:#fff;border:none;padding:0;}
-
-.detail .alert-info {color:#000;}
-.author-container  {margin-top: 20px;}
-.authors_title {margin-bottom:30px;}
-.authors-detail .origin {font-weight:700;}
-.default .teaser .title {border-bottom:none;}
-.default img.teaser_icon {border-radius: 50%;border:1px solid #ccc;}
-.default .teaser {border-bottom:1px solid #ccc;padding:10px 0;margin:0 0 20px;overflow: auto;}
-.default .teaser .teaser_icon_container {background:transparent;padding:0 0 0 50px;margin:0;margin-top:-20px;float:right;}
-.detail .categories .btn {text-transform:uppercase;font-size:12px;}
-.detail .categories .btn span {padding-right:10px;}
-
-.forum h2 {font-size:15px;}
-.forum th {padding: 10px 0;background-color: #f2f2f2;text-align: center;}
-.forum tr.item {border-bottom: 1px solid #E4E4E4;}
-.forum .comment {text-align: center;}
-.forum  td.created {font-size: 13px;}
-.forum  td.last_comment {font-size: 13px;}
-.user-details .user-image {position: relative;  z-index: 1; width: 100%; text-align: center;}
-.user-image img { clear: both; margin: auto; position: relative;}
-
-.user-details .user-info-block {width: 100%; position: absolute; top: 55px; background: rgb(255, 255, 255); z-index: 0; padding-top: 35px;}
-.user-info-block .user-heading {width: 100%; text-align: center; margin: 10px 0 0;}
-.user-info-block .navigation {float: left; width: 100%; margin: 0; padding: 0; list-style: none; border-bottom: 1px solid #428BCA; border-top: 1px solid #428BCA;}
-.navigation li {float: left; margin: 0; padding: 0;}
-.navigation li a {padding: 20px 30px; float: left;}
-.navigation li.active a {background: #428BCA; color: #fff;}
-.user-info-block .user-body {float: left; padding: 5%; width: 90%;}
-.user-body .tab-content > div {float: left; width: 100%;}
-.user-body .tab-content h4 {width: 100%; margin: 10px 0; color: #333;}
-
-
-
-.icon_list_container .type_icon { position: absolute;}
-.icon_list_container .thumbnail { background-color: #eee; height: 275px;}
-.icon_list_container .thumbnail .caption { text-align:center;}
-.category_description {overflow:auto;}
-.category_description .image {float:left;border-radius:50%;margin:0 20px 0 0;}
-span.category_title {display:block;font-size:28px;margin:0;font-weight:600;}
-span.category_title a {color:#000;}
-.category_description .category_title {border-top:1px solid #000;border-bottom:1px solid #000;}
-.collection_image {background:#eee;margin:0 0 10px;}
-.collection_image img {margin: auto;display:block;padding:20px 0;}
-.collection .title {margin-bottom:0;}
-.category .icon {float:right;border-radius:50%;}
-.teaser {overflow:auto;}
-.feed .feed_teaser {border-bottom:1px dotted #999;}
-.feed .btn {margin:0 0 20px;}
-.form-group .controls label {padding:0 0 0 20px;}
-.search_results h3 {border-bottom: 1px solid #999; padding-bottom: 5px;}
-.paginator {display: inline-block; width: 100%;margin-left: 10px;}
-.icon_list_container {margin: 20px -15px 0;}
-
-.search-box .navbar-form {margin:0;padding:0;}
-.row {margin:0;margin-bottom:20px;}
 
 #right span.category_title {display:block;font-size:24px;font-weight:400;}
 #right span.category_title a {color:#000;}
@@ -248,81 +15,3 @@ span.category_title a {color:#000;}
 #right .icon_list_container .thumbnail .caption {text-align:left;padding:0 0 0 55px;margin:0 0 0 ;}
 #right .icon_list_container .teaser_icon  {margin:0 0 20px;height:40px;}
 #right .text a {font-size:14px;padding:0 0 5px;border-bottom:1px dotted #999;display:block;}
-
-.teaser_text_container {display:table-cell;float:right;width:82%;}
-.teaser_text_container_simplified {display:table-cell;float:right;width:100%;}
-.teaser_icon_container {display:table-cell;float:left;width:17%;}
-.teaser {margin:0 0 20px;padding:10px 0;border-bottom:1px dotted #999;}
-.teaser h2.title {margin-top:0;font-weight:500}
-.teaser h4.author {margin:0;padding:0;}
-.teaser .author-container  {margin:0 0 10px;}
-.teaser_more {margin:5px 0 10px;}
-.teaser .pretitle {text-transform:uppercase;}
-
-.category_description .summary {background:#f5f5f5;padding:10px;font-size:18px;margin:0 0 20px;}
-
-
-/*
- * Off Canvas (se puede borrar)
- * --------------------------------------------------
- */
-@media screen and (max-width: 767px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all .25s ease-out;
-         -o-transition: all .25s ease-out;
-            transition: all .25s ease-out;
-  }
-
-  .row-offcanvas-right {
-    right: 0;
-  }
-
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: -50%; /* 6 columns */
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: -50%; /* 6 columns */
-  }
-
-  .row-offcanvas-right.active {
-    right: 50%; /* 6 columns */
-  }
-
-  .row-offcanvas-left.active {
-    left: 50%; /* 6 columns */
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 50%; /* 6 columns */
-  }
-}
- 
-@media (min-width: 1200px) {
-	.col-lg-4 { 
-		overflow:auto; 
-  }
-  .icon_list_container .col-lg-4 { 
-  	height:inherit; 
-		overflow:auto; 
-  }
-}
-
-@media (min-width: 992px) {
-	.col-md-4 { 
-		overflow:auto; 
-  }
-  .icon_list_container .col-md-4 { 
-  	height:inherit; 
-		overflow:auto; 
-  }
-}
