--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -1,17 +1,74 @@
-#left .navbar-nav > li, #rigth .navbar-nav > li {float:none;display:block;}/*fix float vertical navbar */
+html,
+body {
+	overflow-x: hidden; /* Prevent scroll on narrow devices */
+	padding-top: 35px;}
 
+/* fix float vertical navbar */
+#left .navbar-nav > li,
+#rigth .navbar-nav > li {
+	float:none;
+	display:block;}
 
-#right span.category_title {display:block;font-size:24px;font-weight:400;}
-#right span.category_title a {color:#000;}
-#right .category_description .category_title {border-top:1px solid #000;border-bottom:1px solid #000;}
-#right .category_description .summary {font-size:12px;}
-#right .little-title {border-top:1px solid #000;border-bottom:1px solid #000;font-size: 24px !important;display:block;}
-#right h2.title {font-size:18px;}
-#right .icon_list_container .thumbnail {background-color:#fff;height:auto;border:none;margin:0;}
-#right .icon_list_container .thumbnail a > img {width:20%;float:left;}
-#right .icon_list_container h4.title {margin:0;padding:0;font-size:16px;}
-#right .icon_list_container {margin:0;}
-#right .icon_list_container .type_icon {display:none;}
-#right .icon_list_container .thumbnail .caption {text-align:left;padding:0 0 0 55px;margin:0 0 0 ;}
-#right .icon_list_container .teaser_icon  {margin:0 0 20px;height:40px;}
-#right .text a {font-size:14px;padding:0 0 5px;border-bottom:1px dotted #999;display:block;}
+.category_description {
+	overflow:auto;}
+
+.category_description .category_title {
+	border-top:1px solid #000;
+	border-bottom:1px solid #000;}
+
+.category_description .image {
+	float:left;
+	border-radius:50%;
+	margin:0 20px 0 0;}
+
+span.category_title {
+	display:block;
+	font-size:28px;
+	margin:0;
+	font-weight:600;}
+
+span.category_title a {
+	color:#000;}
+
+.collection_teaser {
+	background:#eee;
+	padding:8px;
+	margin:0 0 20px;}
+
+.collection_image {
+	background:#eee;
+	margin:0 0 10px;}
+
+.collection_image img {
+	margin: auto;
+	display:block;
+	padding:20px 0;}
+
+.collection .title {
+	margin-bottom:0;}
+
+.media .date,
+.staticpage .date {
+	font-size: 1em;}
+
+/* ### teaser list of Category members ### */
+
+.teaser .pretitle {
+	text-transform:uppercase;
+	float:left;
+	padding-right:5px;}
+
+.teaser_icon {
+
+	margin-right:10px;}
+
+.article-teaser{  }
+.teaser_icon_container:hover {background:transparent;}
+.teaser_icon_container {display:inline-block;vertical-align:top;}
+.teaser_text_container {width:73%;display:inline-block;float:right;}
+.teaser_text_container_fullwidth {width:100%;margin-top:5px;clear:both;}
+.pretitle-container {margin:0;}
+.article-teaser .date {font-size: 1em;}
+.teaser h2.title {clear:both;margin:0;}
+.teaser_more {margin:5px 0 10px;clear:both;}
+.teaser {margin:15px 0;vertical-align:top;clear:both;border-bottom:1px dotted;overflow:auto;}
