--- a/cyclope/apps/articles/templates/articles/article_newsletter_teaser_center.html
+++ b/cyclope/apps/articles/templates/articles/article_newsletter_teaser_center.html
@@ -6,10 +6,12 @@
     <td>
     <div class="teaser">
 
-      {% if current_object.get_picture %}
+      {% if current_object.pictures.values %}
+      {% with picture=current_object.pictures.values|first %}
       <a href="{% url article-detail current_object.slug %}">
-        <img class="newsletter_image" src="{% version current_object.get_picture.image.path 'newsletter_teaser' %}" alt="{{ current_object.get_picture.name }}"/>
+        <img class="newsletter_image" src="{% version picture.image 'newsletter_teaser' %}" alt="{{ picture.name }}"/>
       </a>
+      {% endwith %}
       {% endif %}
 
       {% if current_object.pretitle %} <span class="pretitle"><a name="editorial">{% trans current_object.pretitle %}</a></span>{% endif %}
