views of teaser list improved in bootstrap

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -72,3 +72,16 @@ span.category_title a {
 .teaser h2.title {clear:both;margin:0;}
 .teaser_more {margin:5px 0 10px;clear:both;}
 .teaser {margin:15px 0;vertical-align:top;clear:both;border-bottom:1px dotted;overflow:auto;}
+
+/* ### teaser list of Category members left and right ### */
+#right .teaser_icon_container, #left .teaser_icon_container {display:block;float:none;border:1px solid;padding:4px;}
+#right .teaser_text_container, #left .teaser_text_container {width:100% ;display:inline;}
+#right .teaser_icon_container img, #left .teaser_icon_container img {margin:0 auto; }
+#right .teaser h2.title, #left .teaser h2.title {font-size:18px;font-weight:700;}
+#right .teaser .summary, #left .teaser .summary {font-size:12px;}
+#right .btn, #left .btn {padding: 1px 5px;font-size: 12px;line-height: 1.5;border-radius: 3px;}
+#right .pretitle-container, #left .pretitle-container {font-size:12px;}
+
+
+
+  
